# masi-hybrid-forecasting

./: .gitignore  .readthedocs.yaml  LICENSE  PROJECT_OVERVIEW.md  README.md  fix_metadata.py  fix_notebooks.py  pyproject.toml
data/: README.md
docs/: INDEX.md  README.md  README_legacy.md  anti_leakage.md  conf.py  data_pipeline.md  index.md  literature_review.md  methodology.md  migration_plan.md  pipeline_index.md  project_spec.md  requirements.txt
notebooks/: 01_preprocessing.ipynb  02_baselines.ipynb  03_feature_engineering.ipynb  04_hmm_regimes.ipynb  05_cnn_lstm.ipynb  06_backtesting.ipynb  07_risk_layer.ipynb  08_strategies.ipynb  09_robustness.ipynb  10_forecast_may_june.ipynb  README.md
reports/: README.md  final_results.md
reports/executive_summary/: MASI_Resume_Executif.docx
scripts/: 00_data_audit.py  01_preprocessing.py  02_baselines.py  03_feature_engineering.py  04_hmm_regimes.py  05_cnn_lstm.py  06_backtesting.py  07_risk_layer.py  08_strategies.py  09_robustness.py  README.md
src/: README.md
src/masi_hybrid_forecasting/: __init__.py
src/masi_hybrid_forecasting/pipeline/: README.md  __init__.py  __main__.py  backtest.py  cli.py  config.py  export.py  forecast.py  metrics.py  predict.py  risk.py  strategies.py  train.py
tests/: README.md  conftest.py
tests/integration/: test_anti_leakage.py  test_cli.py  test_pipeline_outputs.py
tests/unit/: test_risk_functions.py  test_strategy_costs.py
