[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "masi-hybrid-forecasting"
version = "1.0.0"
description = "Hybrid HMM + CNN-LSTM forecasting for the MASI index"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    # Time series / stats
    "statsmodels",
    "arch",
    "hmmlearn",
    # Deep learning
    "torch",
    # Visualization
    "matplotlib",
    "seaborn",
]

[project.scripts]
masi-pipeline = "masi_hybrid_forecasting.pipeline.cli:main"

[project.optional-dependencies]
notebooks = [
    "jupyter",
    "ipykernel",
]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that touch disk or external data",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["docs/references", "notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"
